--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -438,7 +438,7 @@
 				<div class="col-3">
 					<h6>Quick Links</h6>
 					<ul>
-						<li><a href="www.pinnacle.co.in">Pinnacle</a></li><li><a href="https://www.leadgroup.co.in/">LEAD Group</a></li>
+						<li><a href="https://www.pinnacle.co.in/">Pinnacle</a></li><li><a href="https://www.leadgroup.co.in/">LEAD Group</a></li>
 					</ul>
 				</div>
 				<div class="col-3">
