--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -190,7 +190,7 @@
 						<div class="bookslider">
 							<div class="slide">
 								<div class="slideinnr">
-									<img src="images/Open-Green-Book.png" alt="">
+									<img src="images/Open-Green-Book-new.png" alt="">
 									<div class="btnbox">
 										<a href="javascript:;" onclick="showairPopup()" class="posurl">
 										</a>
@@ -199,7 +199,7 @@
 							</div>
 							<div class="slide">
 								<div class="slideinnr">
-									<img src="images/Open-Blue-Book.png" alt="">
+									<img src="images/Open-green-Book--1new.png" alt="">
 									<div class="btnbox">
 										<a href="javascript:;" onclick="showpiePopup()" class="posurl">
 										</a>
@@ -265,10 +265,10 @@
 								<div class="bookFeature">
 									<h6>THE INTELLIGENT SCIENCE BOOK</h6>
 									<ul>
-										<li><img src="images/ari.png" alt="Pie">Concepts come alive with ARI</li>
-										<li><img src="images/pie.png" alt="ari">Personalised practice beyond the book with PIE</li>
-										<li><img src="images/lbd.png" alt="cpa">Learn Science by Doing</li>
-										<li><img src="images/skill.png" alt="skill">Build essential skills</li>
+										<li><img src="images/ari.png" alt="Pie">Concepts come alive <br>with ARI</li>
+										<li><img src="images/pie.png" alt="ari">Personalised practice <br>beyond the book with PIE</li>
+										<li><img src="images/lbd.png" alt="cpa">Learn Science <br>by Doing</li>
+										<li><img src="images/skill.png" alt="skill">Build <br>essential skills</li>
 									</ul>					
 									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
@@ -287,10 +287,10 @@
 								<div class="bookFeature">
 									<h6>THE INTELLIGENT ENGLISH BOOK</h6>
 									<ul>
-										<li><img src="images/ira.png" alt="Pie">Build reading fluency for every child with IRA</li>
-										<li><img src="images/pie.png" alt="ari">Personalised practice beyond the book with PIE</li>
-										<li><img src="images/adls.png" alt="cpa">Advance Language Skills in your students</li>
-										<li><img src="images/lexile.png" alt="skill">⁠Lexile-based reading levels</li>
+										<li><img src="images/ira.png" alt="Pie">Build reading fluency <br>for every child with IRA</li>
+										<li><img src="images/pie.png" alt="ari">Personalised practice <br>beyond the book with PIE</li>
+										<li><img src="images/adls.png" alt="cpa">Advance Language Skills <br>in your students</li>
+										<li><img src="images/lexile.png" alt="skill">⁠Lexile-based <br>reading levels</li>
 									</ul>					
 									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
@@ -309,10 +309,10 @@
 								<div class="bookFeature">
 									<h6>THE INTELLIGENT MATH BOOK</h6>
 									<ul>
-										<li><img src="images/pie.png" alt="Pie">Personalised practice beyond the book with PIE</li>
-										<li><img src="images/ari.png" alt="ari">Concepts come alive with ARI</li>
-										<li><img src="images/cpa.png" alt="cpa">Learn Math via Concrete Pictorial Abstract Method</li>
-										<li><img src="images/skill.png" alt="skill">Build essential skills</li>
+										<li><img src="images/pie.png" alt="Pie">Personalised practice <br>beyond the book with PIE</li>
+										<li><img src="images/ari.png" alt="ari">Concepts come alive <br>with ARI</li>
+										<li><img src="images/cpa.png" alt="cpa">Learn Math via Concrete <br>Pictorial Abstract Method</li>
+										<li><img src="images/skill.png" alt="skill">Build <br>essential skills</li>
 									</ul>					
 									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
