--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -134,7 +134,7 @@
 							<div class="bookslider">
 								<div class="slide">
 									<div class="slideinnr">
-										<img src="images/Open-Red-Book.png" alt="">
+										<img src="images/Open-Red-Book-new.png" alt="">
 										<div class="btnbox">
 											<a href="javascript:void(0)" onclick="showPopup()" class="posurl irabookvideo">												
 											</a>
@@ -158,7 +158,7 @@
 						<div class="bookslider">
 							<div class="slide">
 								<div class="slideinnr">
-									<img src="images/Open-Blue-Book.png" alt="">
+									<img src="images/Open-Blue-Book-new.png" alt="">
 									<div class="btnbox">
 										<a href="javascript:;" onclick="showpiePopup()" class="posurl">
 										</a>
@@ -167,7 +167,7 @@
 							</div>
 							<div class="slide">
 								<div class="slideinnr">
-									<img src="images/Open-Green-Book.png" alt="">
+									<img src="images/Open-Green-Book-1-new.png" alt="">
 									<div class="btnbox">
 										<a href="javascript:;" onclick="showairPopup()" class="posurl">
 										</a>
