--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -39,7 +39,7 @@
 							<li class="curiouslearn"><a href="javascript:;">Pre-book</a></li>
 							<li class="demorequest"><a href="javascript:;">Demo Request</a></li>
 							<!-- <li><a href="javascript:;">Contact Us</a></li> -->
-							<li class="faq"><a href="javascript:;">FAQ's</a></li>
+							<li class="faq"><a href="javascript:;">FAQs</a></li>
 						</ul>
 					</div>
 				</div>
@@ -311,7 +311,7 @@
 									<ul>
 										<li><img src="images/pie.png" alt="Pie">Personalised practice <br>beyond the book with PIE</li>
 										<li><img src="images/ari.png" alt="ari">Concepts come alive <br>with ARI</li>
-										<li><img src="images/cpa.png" alt="cpa">Learn Math via Concrete <br>Pictorial Abstract Method</li>
+										<li><img src="images/cpa.png" alt="cpa">Learn Math via <br>Concrete-Pictorial-Abstract Method</li>
 										<li><img src="images/skill.png" alt="skill">Build <br>essential skills</li>
 									</ul>					
 									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
@@ -464,11 +464,11 @@
 				<div class="col-3">
 					<h6>Follow us</h6>
 					<ul>
-						<li><a href="">Facebook</a></li>
-						<li><a href="">Instagram</a></li>
-						<li><a href="">Linkedin</a></li>
-						<li><a href="">Twitter</a></li>
-						<li><a href="">Youtube</a></li>
+						<li><a href="https://www.facebook.com/leadschoolindia" target="_blank">Facebook</a></li>
+						<li><a href="https://www.instagram.com/leadschoolindia?igsh=b2htdWJ4eTQ4bjl3" target="_blank">Instagram</a></li>
+						<li><a href="https://www.linkedin.com/school/leadgroupindia/" target="_blank">Linkedin</a></li>
+						<li><a href="https://x.com/leadgroupindia?t=2F-AJYxA7W80hRzh6WOuOA&s=09" target="_blank">Twitter</a></li>
+						<li><a href="https://youtube.com/@leadgroupindia?si=yt1iQdtqeEDcFu2h" target="_blank">Youtube</a></li>
 					</ul>
 				</div>
 			</div>
