--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -263,7 +263,7 @@
 									</ul>					
 									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
+										<a href="prebook.html" class="btn formtarget" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
 									</div>
 								</div>
 							</div>
@@ -285,7 +285,7 @@
 									</ul>					
 									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
+										<a href="prebook.html" class="btn formtarget" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
 									</div>
 								</div>
 							</div>
@@ -307,7 +307,7 @@
 									</ul>					
 									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
-										<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
+										<a href="prebook.html" class="btn formtarget" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
 									</div>
 								</div>
 							</div>
@@ -333,7 +333,7 @@
 						<!-- <h2>Interested in bringing this to your schools?</h2>				 -->
 						 <h2>Curious to learn more?</h2>
 						<div class="buttonBox">
-							<a href="prebook.html" class="btn" style="background-image: url(images/buttonbg.png);">Request a demo</a>
+							<a href="javascript:;" class="btn requestaquote" style="background-image: url(images/buttonbg.png);">Request a demo</a>
 						</div>
 					</div>
 				</div>
