--- a/postlaunch/prebook.html
+++ b/postlaunch/prebook.html
@@ -17,7 +17,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-3">
-					<div class="logo"><a href="/"><img src="images/logo.png" alt="logo"></a></div>
+					<div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"></a></div>
 				</div>
 				<div class="col-7">
 					<div class="humburgur" style="display: none;">
@@ -35,7 +35,7 @@
 									<li class="mathbook"><a href="javascript:;"><img src="images/logo.png" alt="logo"> Math</a></li>
 								</ul>
 							</li>
-							<li class="curiouslearn"><a href="javascript:;">Pre-book</a></li>
+							<li class="active"><a href="javascript:;">Pre-book</a></li>
 							<li class="demorequest"><a href="javascript:;">Demo Request</a></li>
 							<li class="faq"><a href="javascript:;">FAQs</a></li>
 						</ul>
