--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -56,8 +56,7 @@
 						<div class="row">
 							<div class="col-3">																
 								<div class="buttonBox">
-									<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a 
-										Demo
+									<a href="prebook.html" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Pre-book
 									</a>
 								</div>
 							</div>
@@ -429,7 +428,7 @@
 				<div class="col-3">
 					<h6>Quick Links</h6>
 					<ul>
-						<li><a href="https://pinnaclelearning.co.in/">Pinnacle</a></li><li><a href="https://www.leadgroup.co.in/">LEAD Group</a></li>
+						<li><a href="https://www.pinnaclelearning.in/">Pinnacle</a></li><li><a href="https://www.leadgroup.co.in/">LEAD Group</a></li>
 					</ul>
 				</div>
 				<div class="col-3">
