--- a/postlaunch/prebook.html
+++ b/postlaunch/prebook.html
@@ -30,14 +30,14 @@
 							<li class="dropdown">
 								<a href="javascript:;">Product</a>
 								<ul class="submenu">
-									<li class="sciencebook"><a href="javascript:;"><img src="images/logo.png" alt="logo"> Science</a></li>
-									<li class="englishbook"><a href="javascript:;"><img src="images/logo.png" alt="logo"> English</a></li>
-									<li class="mathbook"><a href="javascript:;"><img src="images/logo.png" alt="logo"> Math</a></li>
+									<li class="sciencebook"><a href="index.html#sciencebook"><img src="images/logo.png" alt="logo"> Science</a></li>
+									<li class="englishbook"><a href="index.html#englishbook"><img src="images/logo.png" alt="logo"> English</a></li>
+									<li class="mathbook"><a href="index.html#mathbook"><img src="images/logo.png" alt="logo"> Math</a></li>
 								</ul>
 							</li>
 							<li class="active"><a href="javascript:;">Pre-book</a></li>
-							<li class="demorequest"><a href="javascript:;">Demo Request</a></li>
-							<li class="faq"><a href="javascript:;">FAQs</a></li>
+							<li class="demorequest"><a href="index.html#demorequestsec">Demo Request</a></li>
+							<li class="faq"><a href="index.html#faqsection">FAQs</a></li>
 						</ul>
 					</div>
 				</div>
