--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -56,7 +56,8 @@
 						<div class="row">
 							<div class="col-3">																
 								<div class="buttonBox">
-									<a href="prebook.html" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Pre-book
+									<a href="prebook.html" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Pre-book Now
+
 									</a>
 								</div>
 							</div>
