--- a/postlaunch/animation1.html
+++ b/postlaunch/animation1.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +19,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-3">
-					<div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"></a></div>
+					<div class="logo"><a href='/postlaunch/'><img src="images/logo.png" alt="logo"></a></div>
 				</div>
 				<div class="col-7">
 					<div class="humburgur" style="display: none;">
@@ -36,7 +37,7 @@
 									<li class="mathbook"><a href="javascript:;"><img src="images/logo.png" alt="logo"> Math</a></li>
 								</ul>
 							</li>
-							<li><a href="prebook.html">Pre-book</a></li>
+							<li><a href='/postlaunch/prebook'>Pre-book</a></li>
 							<li class="demorequest"><a href="javascript:;">Demo Request</a></li>
 							<li class="faq"><a href="javascript:;">FAQs</a></li>
 						</ul>
@@ -57,25 +58,25 @@
 						<div class="row">
 							<div class="col-3">																
 								<div class="buttonBox">
-									<a href="prebook.html" class="btn formtarget" style="background-image: url(images/buttonbg.png);">Pre-book Now
+									<a class='btn formtarget' href='/postlaunch/prebook' style='background-image: url(images/buttonbg.png);'>Pre-book Now
 
 									</a>
 								</div>
 							</div>
 							<div class="col-7">	
-								<div id="carousel">
+								<div class="flipster">
 									<ul class="flip-items">
-										<li class="yt-item--post" data-modal-id="modal--1">
-											<img data-book="bluebook" src="https://techbookprelaunch.netlify.app/postlaunch/images/sciencemiddle-active-Book.png" alt="Sunflowers" class="techbook">
+										<li class="yt-item--post" id="1">
+											<img src="https://techbookprelaunch.netlify.app/postlaunch/images/sciencemiddle-active-Book.png">
 										</li>
-										<li class="yt-item--post" data-modal-id="modal--1">
-											<img data-book="redbook" src="https://techbookprelaunch.netlify.app/postlaunch/images/middle-active-Book.png" alt="Waterfall" class="techbook">
-										</li>
-										<li class="yt-item--post" data-modal-id="modal--1">
-											<img data-book="greenbook" src="https://techbookprelaunch.netlify.app/postlaunch/images/mathmiddle-active-Book.png" alt="River" class="techbook">
+										<li class="yt-item--post" id="2">
+											<img src="https://techbookprelaunch.netlify.app/postlaunch/images/middle-active-Book.png">
+										 </li>
+										<li class="yt-item--post" id="3">
+											<img src="https://techbookprelaunch.netlify.app/postlaunch/images/mathmiddle-active-Book.png">
 										</li>
 									</ul>
-								</div>								
+								</div>							
 							</div>
 						</div>	
 					</div>
@@ -264,7 +265,7 @@
 									</ul>					
 									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
-										<a href="prebook.html" class="btn formtarget" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
+										<a class='btn formtarget' href='/postlaunch/prebook' style='background-image: url(images/buttonbg.png);'>PRE-BOOK NOW</a>
 									</div>
 								</div>
 							</div>
@@ -286,7 +287,7 @@
 									</ul>					
 									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
-										<a href="prebook.html" class="btn formtarget" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
+										<a class='btn formtarget' href='/postlaunch/prebook' style='background-image: url(images/buttonbg.png);'>PRE-BOOK NOW</a>
 									</div>
 								</div>
 							</div>
@@ -303,12 +304,12 @@
 									<ul>
 										<li><img src="images/pie.png" alt="Pie">Personalised practice <br>beyond the book with PIE</li>
 										<li><img src="images/ari.png" alt="ari">Concepts come alive <br>with ARI</li>
-										<li><img src="images/cpa.png" alt="cpa">Learn Math via <br>Concrete-Pictorial-Abstract Method</li>
+										<li><img src="images/cpa.png" alt="cpa">Learn Math via <br>Concrete-Pictorial-Abstract Method</li>
 										<li><img src="images/skill.png" alt="skill">Build <br>essential skills</li>
 									</ul>					
 									<p><span>NCF-aligned features</span> | <span>Comprehensive teacher resources on the Active Teach App</span> | <span>Rich student resources on the Pinnacle Student App</span></p>
 									<div class="buttonBox">
-										<a href="prebook.html" class="btn formtarget" style="background-image: url(images/buttonbg.png);">PRE-BOOK NOW</a>
+										<a class='btn formtarget' href='/postlaunch/prebook' style='background-image: url(images/buttonbg.png);'>PRE-BOOK NOW</a>
 									</div>
 								</div>
 							</div>
@@ -533,23 +534,76 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="https://mitsubishielectric.in/assets_gws_template_responsive/js/jquery.flipster.min.js"></script>
-	<script>
-		var carousel = $("#carousel");
-		if (carousel) {
-			carousel.flipster({
-				style: 'carousel',
-				spacing: -0.25,
-				nav: false,
-				buttons: true,
-				start: 'center',
-				loop: true,
-				touch: true,
-			});
-		}
-	</script>
 	<style>.yt-item--post {
 		width: 300px;
-	}</style>
+	}
+	.flipster--loop {
+  /*  .flipster__item--past { transform: translateX(-100%); }
+  .flipster__item--future { transform: translateX(100%); }*/
+}
+.flipster--loop .flipster__item {
+  position: absolute;
+}
+.flipster--loop .flipster__item--past-2 {
+  transform: translateX(-100%);
+}
+.flipster--loop .flipster__item--future-2 {
+  transform: translateX(100%);
+}
+.flipster--loop .flipster__item--past-1 {
+  transform: translateX(-50%);
+}
+.flipster--loop .flipster__item--future-1 {
+  transform: translateX(50%);
+}
+.flipster--infinite-carousel .flipster__container,
+.flipster--infinite-carousel .flipster__item {
+  transition: all 350ms ease-in-out;
+  transition-timing-function: cubic-bezier(0.56, 0.12, 0.12, 0.98);
+}
+.flipster--infinite-carousel .flipster__item__content {
+  transition: inherit;
+}
+.flipster--infinite-carousel .flipster__item {
+  position: absolute;
+  opacity: 0;
+  perspective: 800px;
+}
+.flipster--infinite-carousel .flipster__item--past-2,
+.flipster--infinite-carousel .flipster__item--future-2 {
+  opacity: 0.6;
+  transition-delay: 90ms;
+}
+.flipster--infinite-carousel .flipster__item--past-1,
+.flipster--infinite-carousel .flipster__item--future-1 {
+  opacity: 0.8;
+  transition-delay: 60ms;
+}
+.flipster--infinite-carousel .flipster__item--current {
+  opacity: 1;
+  transition-delay: 0;
+}
+.flipster--infinite-carousel .flipster__item--past .flipster__item__content,
+.flipster--infinite-carousel .flipster__item--future .flipster__item__content {
+  transform: scale(0.4);
+}
+.flipster--infinite-carousel .flipster__item--past-2 .flipster__item__content {
+  transform: translateX(-75%) rotateY(45deg) scale(0.6);
+}
+.flipster--infinite-carousel .flipster__item--future-2 .flipster__item__content {
+  transform: translateX(75%) rotateY(-45deg) scale(0.6);
+}
+.flipster--infinite-carousel .flipster__item--past-1 .flipster__item__content {
+  transform: translateX(-50%) rotateY(45deg) scale(0.8);
+}
+.flipster--infinite-carousel .flipster__item--future-1 .flipster__item__content {
+  transform: translateX(50%) rotateY(-45deg) scale(0.8);
+}
+.flipster--infinite-carousel .flipster__item--current .flipster__item__content {
+  transform: translateX(0) rotateY(0deg) scale(1);
+}
+</style>
+	<script src="slider.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 	<script>
 		$(document).ready(function() {
