--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -140,68 +140,68 @@
 							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-			<div class="bookpdf bluebookpdf" id="bluebookpdf" style="display: none;">
-				<div class="bookpdfinnr">
-					<div class="bookpdfrow">
-						<div class="close"><img src="images/cross.png" alt="cross"></div>
-						<div class="bookslider">
-							<div class="slide">
-								<div class="slideinnr">
-									<img src="images/Open-Blue-Book-new.png" alt="">
-									<div class="btnbox">
-										<a href="javascript:;" onclick="showpiePopup()" class="posurl">
-										</a>
+				</div>				
+				<div class="bookpdf bluebookpdf" id="bluebookpdf" style="display: none;">
+					<div class="bookpdfinnr">
+						<div class="bookpdfrow">
+							<div class="close"><img src="images/cross.png" alt="cross"></div>
+							<div class="bookslider">
+								<div class="slide">
+									<div class="slideinnr">
+										<img src="images/Open-Green-Book-1-new.png" alt="">
+										<div class="btnbox">
+											<a href="javascript:;" onclick="showmathariPopup()" class="posurl">
+											</a>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="slide">
-								<div class="slideinnr">
-									<img src="images/Open-Green-Book-1-new.png" alt="">
-									<div class="btnbox">
-										<a href="javascript:;" onclick="showmathariPopup()" class="posurl">
-										</a>
+								<div class="slide">
+									<div class="slideinnr">
+										<img src="images/Open-Blue-Book-new.png" alt="">
+										<div class="btnbox">
+											<a href="javascript:;" onclick="showpiePopup()" class="posurl">
+											</a>
+										</div>
 									</div>
 								</div>
+							</div>							
+							<div class="buttonBox">
+								<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a 
+									Demo
+								</a>
 							</div>
-						</div>							
-						<div class="buttonBox">
-							<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a 
-								Demo
-							</a>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="bookpdf greenbookpdf" id="bluebookpdf" style="display: none;">
-				<div class="bookpdfinnr">
-					<div class="bookpdfrow">
-						<div class="close"><img src="images/cross.png" alt="cross"></div>
-						<div class="bookslider">
-							<div class="slide">
-								<div class="slideinnr">
-									<img src="images/Open-Green-Book-new.png" alt="">
-									<div class="btnbox">
-										<a href="javascript:;" onclick="showairPopup()" class="posurl">
-										</a>
+				<div class="bookpdf greenbookpdf" id="bluebookpdf" style="display: none;">
+					<div class="bookpdfinnr">
+						<div class="bookpdfrow">
+							<div class="close"><img src="images/cross.png" alt="cross"></div>
+							<div class="bookslider">
+								<div class="slide">
+									<div class="slideinnr">
+										<img src="images/Open-Green-Book-new.png" alt="">
+										<div class="btnbox">
+											<a href="javascript:;" onclick="showairPopup()" class="posurl">
+											</a>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="slide">
-								<div class="slideinnr">
-									<img src="images/Open-green-Book--1new.png" alt="">
-									<div class="btnbox">
-										<a href="javascript:;" onclick="scipiePopup()" class="posurl">
-										</a>
+								<div class="slide">
+									<div class="slideinnr">
+										<img src="images/Open-green-Book--1new.png" alt="">
+										<div class="btnbox">
+											<a href="javascript:;" onclick="scipiePopup()" class="posurl">
+											</a>
+										</div>
 									</div>
 								</div>
+							</div>							
+							<div class="buttonBox">
+								<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a 
+									Demo
+								</a>
 							</div>
-						</div>							
-						<div class="buttonBox">
-							<a href="javascript:;" class="btn formtarget requestaquote" style="background-image: url(images/buttonbg.png);">Request a 
-								Demo
-							</a>
 						</div>
 					</div>
 				</div>
@@ -256,8 +256,8 @@
 								<div class="bookFeature">
 									<h6>THE INTELLIGENT SCIENCE BOOK</h6>
 									<ul>
-										<li><img src="images/ari.png" alt="Pie">Concepts come alive <br>with ARI</li>
-										<li><img src="images/pie.png" alt="ari">Personalised practice <br>beyond the book with PIE</li>
+										<li><img src="images/ari.png" alt="arI" onclick="showairPopup()">Concepts come alive <br>with ARI</li>
+										<li><img src="images/pie.png" alt="PIE" onclick="scipiePopup()">Personalised practice <br>beyond the book with PIE</li>
 										<li><img src="images/lbd.png" alt="cpa">Learn Science <br>by Doing</li>
 										<li><img src="images/skill.png" alt="skill">Build <br>essential skills</li>
 									</ul>					
@@ -278,8 +278,8 @@
 								<div class="bookFeature">
 									<h6>THE INTELLIGENT ENGLISH BOOK</h6>
 									<ul>
-										<li><img src="images/ira.png" alt="Pie">Build reading fluency <br>for every child with IRA</li>
-										<li><img src="images/pie.png" alt="ari">Personalised practice <br>beyond the book with PIE</li>
+										<li><img src="images/ira.png" alt="IRA">Build reading fluency <br>for every child with IRA</li>
+										<li><img src="images/pie.png" alt="PIE" onclick="showpiePopup()">Personalised practice <br>beyond the book with PIE</li>
 										<li><img src="images/adls.png" alt="cpa">Advance Language Skills <br>in your students</li>
 										<li><img src="images/lexile.png" alt="skill">⁠Lexile-based <br>reading levels</li>
 									</ul>					
@@ -300,8 +300,8 @@
 								<div class="bookFeature">
 									<h6>THE INTELLIGENT MATH BOOK</h6>
 									<ul>
-										<li><img src="images/pie.png" alt="Pie">Personalised practice <br>beyond the book with PIE</li>
-										<li><img src="images/ari.png" alt="ari">Concepts come alive <br>with ARI</li>
+										<li><img src="images/ari.png" onclick="showPopup()" alt="ari">Concepts come alive <br>with ARI</li>
+										<li><img src="images/pie.png" onclick="showpiePopup()" alt="Pie">Personalised practice <br>beyond the book with PIE</li>
 										<li><img src="images/cpa.png" alt="cpa">Learn Math via <br>Concrete-Pictorial-Abstract Method</li>
 										<li><img src="images/skill.png" alt="skill">Build <br>essential skills</li>
 									</ul>					
@@ -654,7 +654,7 @@
 				$('.bluebookpdf').show();
 				$(".bluebookactive").hide();
 				$('.bookslider').slick('refresh');
-				$('.blockbookjourney').hide(); 
+				// $('.blockbookjourney').hide(); 
 				
 			});
 			$('.redactive').click(function() {
@@ -667,7 +667,7 @@
 				$('.greenbookpdf').show();
 				$(".greenbookactive").hide();
 				$('.bookslider').slick('refresh');
-				$('.blockbookjourney').hide(); 
+				// $('.blockbookjourney').hide(); 
 
 			});
 			$('.scienceclickexplore').click(function() {
@@ -696,7 +696,7 @@
 			$('.bookpdfrow .close').click(function() {
 				$('.bookpdf').hide();
 				$('.bookthreeblock').show();
-				$('.blockbookjourney').css('display', 'flex');
+				// $('.blockbookjourney').css('display', 'flex');
 			});
 			
 
