--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -278,7 +278,7 @@
 								<div class="bookFeature">
 									<h6>THE INTELLIGENT ENGLISH BOOK</h6>
 									<ul>
-										<li><img src="images/ira.png" alt="IRA">Build reading fluency <br>for every child with IRA</li>
+										<li><img src="images/ira.png" alt="IRA" onclick="showPopup()">Build reading fluency <br>for every child with IRA</li>
 										<li><img src="images/pie.png" alt="PIE" onclick="showpiePopup()">Personalised practice <br>beyond the book with PIE</li>
 										<li><img src="images/adls.png" alt="cpa">Advance Language Skills <br>in your students</li>
 										<li><img src="images/lexile.png" alt="skill">⁠Lexile-based <br>reading levels</li>
@@ -300,7 +300,7 @@
 								<div class="bookFeature">
 									<h6>THE INTELLIGENT MATH BOOK</h6>
 									<ul>
-										<li><img src="images/ari.png" onclick="showPopup()" alt="ari">Concepts come alive <br>with ARI</li>
+										<li><img src="images/ari.png" onclick="showmathariPopup()" alt="ari">Concepts come alive <br>with ARI</li>
 										<li><img src="images/pie.png" onclick="showpiePopup()" alt="Pie">Personalised practice <br>beyond the book with PIE</li>
 										<li><img src="images/cpa.png" alt="cpa">Learn Math via <br>Concrete-Pictorial-Abstract Method</li>
 										<li><img src="images/skill.png" alt="skill">Build <br>essential skills</li>
