--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<title>Techbook: home</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Techbook: The Intelligent Book for New-Age Schools</title>
+	<meta name="description" content="Upgrade your school with Techbook—digital textbooks featuring AR, personalized learning, and interactive exercises for Math, Science, and English. Pre-book for your school today!">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -254,7 +255,7 @@
 							</div>
 							<div class="col-6">
 								<div class="bookFeature">
-									<h6>THE INTELLIGENT SCIENCE BOOK</h6>
+									<h2>THE INTELLIGENT SCIENCE BOOK</h2>
 									<ul>
 										<li><img src="images/ari.png" alt="arI" onclick="showairPopup()">Concepts come alive <br>with ARI</li>
 										<li><img src="images/pie.png" alt="PIE" onclick="scipiePopup()">Personalised practice <br>beyond the book with PIE</li>
@@ -276,7 +277,7 @@
 							</div>
 							<div class="col-6">
 								<div class="bookFeature">
-									<h6>THE INTELLIGENT ENGLISH BOOK</h6>
+									<h2>THE INTELLIGENT ENGLISH BOOK</h2>
 									<ul>
 										<li><img src="images/ira.png" alt="IRA" onclick="showPopup()">Build reading fluency <br>for every child with IRA</li>
 										<li><img src="images/pie.png" alt="PIE" onclick="showpiePopup()">Personalised practice <br>beyond the book with PIE</li>
@@ -298,7 +299,7 @@
 							</div>
 							<div class="col-6">
 								<div class="bookFeature">
-									<h6>THE INTELLIGENT MATH BOOK</h6>
+									<h2>THE INTELLIGENT MATH BOOK</h2>
 									<ul>
 										<li><img src="images/ari.png" onclick="showmathariPopup()" alt="ari">Concepts come alive <br>with ARI</li>
 										<li><img src="images/pie.png" onclick="showpiePopup()" alt="Pie">Personalised practice <br>beyond the book with PIE</li>
