--- a/postlaunch/prebook.html
+++ b/postlaunch/prebook.html
@@ -136,7 +136,7 @@
                                                     <button  class="curiousFormSubmit" type="submit">Request Callback</button>
                                                 </aside>
                                             </form>
-                                            <p>You can also <a href="#">Call Us</a> for the same.</p>
+                                            <p>You can also call us at <a href="tel:+918884522552">+91-88845 22552</a> for the same.</p>
                                         </div>
                                         <!-- form start -->
 
